--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="uk-navbar-container uk-margin" uk-navbar>
       <div class="uk-navbar-left">
-        <a class="uk-navbar-item uk-logo" href="#">Logo</a>
+        <a class="uk-navbar-item uk-logo" href="#" uk-toggle="target: #offcanvas-reveal">Logo</a>
       </div>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
